--- a/CashFlowControlSystem/2.Crosscutting/ApiGateway/ApiGateway.csproj
+++ b/CashFlowControlSystem/2.Crosscutting/ApiGateway/ApiGateway.csproj
@@ -6,16 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aadfe300-3597-480e-8691-1d5cc414868e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
