--- a/CashFlowControlSystem/docker-compose.yml
+++ b/CashFlowControlSystem/docker-compose.yml
@@ -1,18 +1,45 @@
 services:
-  transactionservice:
-    image: ${DOCKER_REGISTRY-}transactionservice
-    build:
-      context: .
-      dockerfile: 0. Core/TransactionService/Dockerfile
+    apigateway:
+      image: apigateway:latest
+      container_name: apigateway
+      build:
+        context: .
+        dockerfile: "2.Crosscutting/ApiGateway/Dockerfile"
+      ports:
+        - "5000:80"
+      command: ["dotnet", "ApiGateway.dll"]
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:80/health"]
+        interval: 30s
+        timeout: 10s
+        retries: 3    
 
-  consolidationservice:
-    image: ${DOCKER_REGISTRY-}consolidationservice
-    build:
-     context: .
-     dockerfile: 0. Core/ConsolidationService/Dockerfile
+    transactionservice:
+      image: transactionservice:latest
+      container_name: transactionservice
+      build:
+        context: .
+        dockerfile: "0.Core/TransactionService/Dockerfile"
+      ports:
+        - "5001:80"
+      command: ["dotnet", "TransactionService.dll"]
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:80/health"]
+        interval: 30s
+        timeout: 10s
+        retries: 3
 
-  apigateway:
-    image: ${DOCKER_REGISTRY-}apigateway
-    build:
-     context: .
-     dockerfile: 2. Crosscutting/ApiGateway/Dockerfile
+    consolidationservice:
+      image: consolidationservice:latest
+      container_name: consolidationservice
+      build:
+        context: .
+        dockerfile: "0.Core/ConsolidationService/Dockerfile"
+      ports:
+        - "5002:80"
+      command: ["dotnet", "ConsolidationService.dll"]
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:80/health"]
+        interval: 30s
+        timeout: 10s
+        retries: 3
