:truck: Update entities path

--- a/CashFlowControlSystem/0.Core/ConsolidationService/ConsolidationService.csproj
+++ b/CashFlowControlSystem/0.Core/ConsolidationService/ConsolidationService.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\" />
+    <Folder Include="Application\Services\" />
   </ItemGroup>
 
 </Project>
