--- a/CashFlowControlSystem/2.Crosscutting/ApiGateway/Properties/launchSettings.json
+++ b/CashFlowControlSystem/2.Crosscutting/ApiGateway/Properties/launchSettings.json
@@ -1,23 +1,16 @@
 {
   "profiles": {
-    "http": {
+    "ApiGateway": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5193"
-    },
-    "https": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7271;http://localhost:5193"
+      "applicationUrl": "https://localhost:53394;http://localhost:53395"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
+      "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
@@ -26,6 +19,5 @@
       "publishAllPorts": true,
       "useSSL": true
     }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json"
+  }
 }
